# gcmgen

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: anthropic.rs  cli.rs  client.rs  config.rs  gh.rs  git.rs  main.rs  openai.rs  vim.rs
