[package]
name = "gcmgen"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
reqwest = {features = ["blocking", "json"], version = "0.12.4"}
clap = { version = "4.5.16", features = ["derive", "cargo"] }
inquire = {version = "0.7.5"}
tempfile = "3.12.0"

[dev-dependencies]
uuid = { version = "1.8.0" , features = ["v4"]}
serial_test = "0.5.0"
